--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mongoose": "^5.9.2",
-    "nodemon": "^2.0.2",
     "socket.io": "^2.3.0",
     "ws": "^7.2.1"
   },
@@ -28,7 +27,6 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "nodemon": "^1.18.6"
+    "babel-plugin-transform-export-extensions": "^6.22.0"
   }
 }
