--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parse": "^0.1.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "minimist": "^1.2.2",
     "mongoose": "^5.9.2",
     "socket.io": "^2.3.0",
     "ws": "^7.2.1"
