"新增后台管理接口"

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alicloud/pop-core": "^1.7.9",
     "axios": "^0.19.2",
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
